--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -34,7 +34,7 @@ footer {
     padding: 1rem;
     background-color: #003366;
     border-radius: .5rem;
-    color: #000204;
+    color: #dcdeff;
 }
 
 header,
